fix: resolve CORS policy and configure ddl-auto update